--- a/Desktop/Hotels_deployement/static/style.css
+++ b/Desktop/Hotels_deployement/static/style.css
@@ -9,13 +9,13 @@ body {
   text-align: left;
   color: #525f7f;
   background-color: #f8f9fe;
-  background-image: url("hotels.jpg");
+/*   background-image: url("hotels.jpg");
   background-repeat: no-repeat, repeat;
   background-position: center; /* Center the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+/*   background-size: cover; /* Resize the background image to cover the entire container */ */ */
 }
 
-[tabindex='-1']:focus {
+/* [tabindex='-1']:focus {
   outline: 0 !important;
 }
 
@@ -23,4 +23,4 @@ body {
   width: 60%;
   margin: 20px;
   
-}
+} */
